--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-  "livePreview.defaultPreviewPath": "/HTML/home.html"
+  "livePreview.defaultPreviewPath": "/HTML/home.html",
+  "liveServer.settings.port": 5501
 }
